Fix empty gap issue under slider on place page

--- a/app/assets/stylesheets/place.css
+++ b/app/assets/stylesheets/place.css
@@ -25,17 +25,6 @@
   margin: 13px 10px 12px 10px;
 }
 
-.slide-buttons {
-  position: relative;
-  top: -30px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.slide-button {
-  margin: 0 10px;
-}
-
 .place-details {
   padding: 9px 32px;
   display: flex;
